# vertical_gravity

./: .gitignore  .zenodo.json  CITATION.cff  FINAL_REPRODUCTION_CRITERIA.md  LICENSE  PUBLICATION_PIPELINE_MANIFEST.md  README.md  pyproject.toml
data/: baryon_band.csv  baryon_band_nbar1.csv  baryon_band_nbar2.csv  baryon_band_nbar3.csv  baryon_band_nbar4.csv  baryonic_target_band.csv  feng2026_cepheid_rotation_curve.csv  fig1_density_grid.npz  fig1_spiral_arms.csv  fig2_observational_catalog.csv  wang2026_rotation_curve.csv  wang2026_vertical_potential.csv
outputs/: fig2_observational_data.csv  fig2c_hmg_common_s_mc100_detail.csv  hmg_competitive_analysis.csv  mc100_baryonic_radial.csv  mc100_baryonic_vertical.csv  mc100_chi2_all_models.csv  model_baryonic_radial.csv  model_baryonic_vertical.csv  model_cdm_einasto_radial.csv  model_cdm_einasto_vertical.csv  model_cdm_nfw_radial.csv  model_cdm_nfw_vertical.csv  model_emergent_gravity_radial.csv  model_emergent_gravity_vertical.csv  model_fr_screened_radial.csv  model_fr_screened_vertical.csv  model_hmg_k1_radial.csv  model_hmg_k1_vertical.csv  model_qumond_mls_radial.csv  model_qumond_mls_vertical.csv  model_qumond_simple_radial.csv  model_qumond_simple_vertical.csv  model_qumond_standard_radial.csv  model_qumond_standard_vertical.csv  model_refracted_gravity_radial.csv  model_refracted_gravity_vertical.csv  model_stvg_radial.csv  model_stvg_vertical.csv  model_veg_original_radial.csv  model_veg_original_vertical.csv  wang78_table2_joint_disc.csv
scripts/: monitor_chi2.py  rebuild_baryon_band.py  run_all_nbar.py  (+14 more)
(+166 files in other folders)
