[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vgrav"
version = "1.0.0"
description = "Vertical gravity Milky Way benchmark: baryonic MC100 + 11 gravity models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["astrophysics", "milky-way", "dark-matter", "modified-gravity"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vgrav*"]

[tool.setuptools.package-data]
vgrav = ["../data/*.csv"]
